Update horizontal scrolling fix and social media spacing

--- a/style.css
+++ b/style.css
@@ -10,11 +10,14 @@
 }
 
 html {
+  overflow-x:  hidden;
   overflow-y: auto;
 }
 
 body {
-  width: 100vw;
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
   font-family: 'Inter', Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -23,7 +26,6 @@ body {
   flex-direction: column;
   justify-content: center;
   padding: 0 3rem;
-  padding-bottom: 3rem;
   gap: 3rem;
 }
 
@@ -62,7 +64,7 @@ body {
   font-style: normal;
   font-weight: 400;
   font-size: 1.3rem;
-  line-height: 1.8rem;
+  line-height: 2.5rem;
   margin-top: 2rem;
   color: #172b4d;
 }
@@ -280,8 +282,9 @@ form .see-btn {
 #about-me .text {
   font-weight: 400;
   font-size: 1.3rem;
-  line-height: 1.8rem;
+  line-height: 2.5rem;
   color: #42526e;
+  text-align: center;
 }
 
 #ab-me-img {
@@ -410,6 +413,7 @@ form .see-btn {
   font-size: 2.5rem;
   color: #172b4d;
   text-align: center;
+  line-height: 4rem;
 }
 
 form {
@@ -437,6 +441,7 @@ form textarea {
 
 hr {
   display: none;
+  position: absolute;
   background-color: #dfe1e6;
   height: 0.1rem;
   border: none;
@@ -450,10 +455,6 @@ hr {
 
 /* Footer */
 
-ul[class='soc-med-list bottom'] {
-  padding-bottom: 2rem;
-}
-
 #contact-img {
   background: url('./icons/contact.svg') no-repeat;
   background-size: 5rem;
@@ -465,12 +466,13 @@ ul[class='soc-med-list bottom'] {
   z-index: -1;
 }
 
+footer {
+  margin: 2rem 0;
+}
+
 /* Responsiveness */
 
 @media only screen and (min-width: 768px) {
-  #padding-ctn {
-    padding: 0 5rem;
-  }
 
   #headline {
     margin-top: 18rem;
@@ -546,13 +548,14 @@ ul[class='soc-med-list bottom'] {
 
   hr {
     display: block;
+    position: relative;
+    margin-top: 2rem;
   }
 
   #contact {
     overflow: visible;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-bottom: 10rem;
   }
 
   form {
